Notification popup alignment fixed

--- a/client/src/styles/watch.scss
+++ b/client/src/styles/watch.scss
@@ -31,10 +31,10 @@
   background-color: black;
   color: white;
   position: absolute;
-  height: 160px;
+  height: 110px;
   width: 160px;
   margin-top: -260px;
-  margin-left: 40px;
+  margin-left: 50px;
   opacity: 0.9;
   z-index: 100;
   padding: 20px;
